# gitcom

./: .gitignore  Cargo.toml  Makefile.toml  Rocket.toml
app/: .eslintrc  package-lock.json  package.json  setupTests.js  webpack.config.js
app/src/: App.jsx  App.test.jsx  app.js  index.html
app/src/pages/: HomePage.jsx  HomePage.test.jsx
app/static/: index.html
src/: app.rs  macros.rs  main.rs
